--- a/.github/workflows/expand-as-sets.yml
+++ b/.github/workflows/expand-as-sets.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Install bgpq3
-        run: sudo apt install -y bgpq3
+      - name: Install bgpq3 and whois
+        run: sudo apt install -y bgpq3 whois
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
