--- a/.github/workflows/expand-as-sets.yml
+++ b/.github/workflows/expand-as-sets.yml
@@ -32,13 +32,15 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          cat /dev/null > as-sets.csv
           a="\"asn\" = '"
           c="'"
+          b=$(whois -h whois.radb.net \!iAS-IU13WAN,5 | tr -d '\n' | grep -Po "AS[0-9]+" | grep -Po "[0-9]+" | awk -v d="' OR \"asn\" = '" '{s=(NR==1?s:s d)$0}END{print s}')
+          echo "AS-IU13WAN,$a$b$c" > as-sets.csv
+          exclude=$(whois -h whois.radb.net \!iAS-IU13WAN,5 | tr -d '\n' | grep -Po "AS[0-9]+" | grep -Po "[0-9]+" | awk -v d="|" '{s=(NR==1?s:s d)$0}END{print s}')
           readarray -t objects < AS-SET.txt
           for object in "${objects[@]}"
           do
-            b=$(whois -h whois.radb.net \!i$object,5 | tr -d '\n' | grep -Po "AS[0-9]+" | grep -Po "[0-9]+" | awk -v d="' OR \"asn\" = '" '{s=(NR==1?s:s d)$0}END{print s}')
+            b=$(whois -h whois.radb.net \!i$object,5 | tr -d '\n' | grep -Po "AS[0-9]+" | grep -Po "[0-9]+" | egrep -v "$exclude" |awk -v d="' OR \"asn\" = '" '{s=(NR==1?s:s d)$0}END{print s}')
             echo "$object,$a$b$c" >> as-sets.csv
           done
       - name: Commit and push changes
