--- a/.github/workflows/expand-as-sets.yml
+++ b/.github/workflows/expand-as-sets.yml
@@ -24,10 +24,16 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: bgpq3 whois
+          version: 1.0
+
 
       # Runs a single command using the runners shell
-      - name: Install bgpq3 and whois
-        run: sudo apt install -y bgpq3 whois
+      #- name: Install bgpq3 and whois
+      #  run: sudo apt install -y bgpq3 whois
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
